# tz_absolut

./: .env.example  README.md  choices.JSON  pyproject.toml
app/: settings.py  urls.py
mainApp/: urls.py  views.py
mainApp/templates/mainApp/: main.html
surveyApp/: admin.py  forms.py  models.py  urls.py
surveyApp/management/commands/: test.py
surveyApp/migrations/: 0001_initial.py  0002_alter_question_survey.py  0003_alter_question_survey.py
surveyApp/templates/surveyApp/: question_choice.html  question_confirm_delete.html  question_text.html  survey_detail.html  survey_form.html  survey_list.html
surveyApp/views/: answer.py  question.py  survey.py
usersApp/: admin.py  forms.py  models.py  services.py  tests.py  urls.py
usersApp/management/commands/: csu.py
usersApp/migrations/: 0001_initial.py  0002_user_code.py
usersApp/templates/usersApp/: base.html  change_password.html  confirm.html  login.html  main.html  registration.html  send_word.html  user_detail.html
usersApp/views/: users.py
